<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="generic_error_header">Something went wrong</string>
    <string name="generic_error_message">Please try again</string>
    <string name="internet_connectivity_error_header">No Internet Connection</string>
    <string name="internet_connectivity_error_message">Please check your Internet connection and try again</string>
    <string name="too_many_attempts_header">Too many attempts</string>
    <string name="email_login_later_message">PLEASE TRY TO LOG IN LATER</string>
    <string name="phone_login_later_message">Please try to log in later</string>
    <string name="email_exists_header">Email address already taken</string>
    <string name="email_exists_message">THIS EMAIL ADDRESS HAS ALREADY BEEN REGISTERED</string>
    <string name="email_invalid_header">Invalid email address</string>
    <string name="email_invalid_message">PLEASE ENTER A VALID EMAIL ADDRESS</string>
    <string name="invalid_credentials_header">Invalid information</string>
    <string name="invalid_credentials_message">PLEASE VERIFY YOUR DETAILS AND TRY AGAIN</string>
    <string name="phone_exists_header">Phone number already taken</string>
    <string name="phone_exists_message">The phone number you provided has already been registered. Please try again</string>
    <string name="phone_invalid_format_header">Invalid phone number</string>
    <string name="phone_invalid_format_message">Please enter a valid phone number</string>
    <string name="phone_password_exists_header">Password exists</string>
    <string name="phone_password_exists_message">This account already has a password and email associated. Please log in by email.</string>
    <string name="invalid_code_header">Invalid code</string>
    <string name="incorrect_code_header">Incorrect Code</string>
    <string name="wrong_code_message">PLEASE ENTER A VALID CODE</string>
    <string name="phone_pending_login_header">Code Already Sent</string>
    <string name="phone_pending_login_message">We already sent you a code via SMS. Tap Resend after 10 minutes to get a new one.</string>
    <string name="phone_budget_exhausted_header">Too many requests</string>
    <string name="phone_budget_exhausted_message">Please try again later.</string>
    <string name="conversation_input_bar_message_too_long_title">Message too long</string>
    <string name="conversation_input_bar_message_too_long_message">You can send messages up to %1$s characters long.</string>
    <string name="conversation_input_bar_dialog_ok">OK</string>
    <string name="permissions_denied_dialog_settings">Settings</string>
    <string name="camera_not_available">CAMERA NOT AVAILABLE</string>
    <string name="camera_permissions_denied_title">Camera not available</string>
    <string name="camera_permissions_denied_message">To take and send photos, grant permission to access the camera</string>
    <string name="welcome__terms_of_service">BY CONTINUING YOU AGREE TO _TERMS OF USE_.</string>
    <string name="profile__name__guidance__tooshort__title">AT LEAST 2 CHARACTERS</string>
    <string name="profile__email__placeholder">Email</string>
    <string name="profile__password__placeholder">Password</string>
    <string name="profile__password__guidance__tooshort__title">AT LEAST 8 CHARACTERS</string>
    <string name="profile__email__verify__instructions">We sent an email to \n[[%1$s]]. \nFollow the link to verify your address.</string>
    <string name="profile__email__verify__didnt_get">Didn\'t get the message?</string>
    <string name="profile__email__verify__resend">Re-send</string>
    <string name="profile__guidance__invalid_email">The email address you entered is not valid. Please verify and try again</string>
    <string name="new_reg__code_resent">A new code was sent to you via SMS</string>
    <string name="new_reg__email_code_resent">A new code was sent to you via email</string>
    <string name="new_reg__code_resent__call">Stand by for a call</string>
    <string name="new_reg__default_country">de</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="pick_user_search_focus">\u0020 SEARCH</string>
    <string name="pick_user_search_hint">SEARCH</string>
    <string name="choose_conversation">SEARCH</string>
    <string name="people_picker__top_users_header_title">Top people</string>
    <string name="people_picker__search_result_conversations_header_title">Groups</string>
    <string name="people_picker__search_result_team_conversations_header_title">%1$s Groups</string>
    <string name="people_picker__search_result_connections_searched_header_title">Contacts</string>
    <string name="people_picker__search_result_others_header_title">Connect with Wire</string>
    <string name="people_picker__search_result_others_header_federated">Connect with %1$s</string>
    <string name="people_picker__search_result__expander_title">Show all %1$s ↓</string>
    <string name="people_picker__search_people">PEOPLE</string>
    <string name="people_picker__search_services">SERVICES</string>
    <string name="receive_news_and_offers_request_title">Newsletter</string>
    <string name="receive_news_and_offers_request_body">Do you want to receive news and product updates from Wire via email? You can unsubscribe at any time.</string>
    <string name="crashes_and_analytics_request_title">Help us make Wire better</string>
    <string name="crashes_and_analytics_request_body">I agree that Wire may create and use anonymous usage and error reports to improve the Wire App. I can revoke this consent at any time.</string>
    <string name="crashes_and_analytics_request_no">No</string>
    <string name="crashes_and_analytics_request_agree">I Agree</string>
    <string name="request_password_ok">OK</string>
    <string name="request_password_cancel">Cancel</string>
    <string name="request_password_biometric_description">Unlock using biometric authentication.</string>
    <string name="request_password_biometric_cancel">Cancel</string>
    <string name="request_password_error">Wrong passcode</string>
    <string name="integrations_picker__section_title">Services</string>
    <string name="integrations_errors_add_service">Adding service not possible</string>
    <string name="integrations_errors_service_unavailable">The service is unavailable at the moment</string>
    <string name="conversation_errors_full">The conversation is full</string>
    <string name="people_picker__invite__share_details_dialog">Share Wire with your friends.</string>
    <string name="people_picker__invite__share_text__header">%1$s wants to connect on Wire</string>
    <string name="people_picker__invite__share_text__body">I\'m on Wire, search for %1$s or visit get.wire.com</string>
    <string name="conversation_quick_menu__conversation_button__single_label">OPEN</string>
    <string name="content__system__other_joined">[[%1$s]] joined</string>
    <string name="content__system__you_joined">[[You]] joined</string>
    <string name="content__system__other_renamed_conv">[[%1$s]] renamed the conversation</string>
    <string name="content__system__you_renamed_conv">[[You]] renamed the conversation</string>
    <string name="content__system__read_receipts_on">Read receipts are on</string>
    <string name="content__system__read_receipts_off">Read receipts are off</string>
    <string name="content__system__read_receipts_someone_turned_on">[[%1$s]] turned read receipts on for everyone</string>
    <string name="content__system__read_receipts_someone_turned_off">[[%1$s]] turned read receipts off for everyone</string>
    <string name="content__system__read_receipts_you_turned_on">[[You]] turned read receipts on for everyone</string>
    <string name="content__system__read_receipts_you_turned_off">[[You]] turned read receipts off for everyone</string>
    <string name="content__system__someone_added_people">[[%1$s]] added %2$s to the conversation</string>
    <plurals name="content__system__someone_added_people_with_others">
        <item quantity="one">[[%1$s]] added %2$s and _%3$s other to the conversation_</item>
        <item quantity="other">[[%1$s]] added %2$s and _%3$s others to the conversation_</item>
    </plurals>
    <string name="content__system__someone_added_you">[[%1$s]] added you to the conversation</string>
    <plurals name="content__system__someone_added_people_and_you_with_others">
        <item quantity="one">[[%1$s]] added %2$s, you and _%3$s other to the conversation_</item>
        <item quantity="other">[[%1$s]] added %2$s, you and _%3$s others to the conversation_</item>
    </plurals>
    <string name="content__system__you_added_people">You added %1$s to the conversation</string>
    <plurals name="content__system__you_added_people_with_others">
        <item quantity="one">You added %1$s and _%2$s other to the conversation_</item>
        <item quantity="other">You added %1$s and _%2$s others to the conversation_</item>
    </plurals>
    <string name="content__system__other_removed_other">[[%1$s]] removed %2$s</string>
    <string name="content__system__other_removed_someone">[[%1$s]] removed someone</string>
    <string name="content__system__someone_removed_other">Someone removed %2$s</string>
    <string name="content__system__other_removed_you">[[%1$s]] removed you</string>
    <string name="content__system__someone_removed_you">Someone removed you</string>
    <string name="content__system__you_removed_other">You removed %1$s</string>
    <string name="content__system__you_removed_someone">You removed someone</string>
    <string name="content__system__you_left">[[You]] left</string>
    <string name="content__system__other_left">[[%1$s]] left</string>
    <string name="content__system__someone_left">Someone left</string>
    <string name="content__system__other_was_removed">%1$s was removed</string>
    <string name="content__system__someone_was_removed">Someone was removed</string>
    <string name="pref_advanced_send_anonymous_crash_reports_title">Send anonymous crash reports</string>
    <string name="pref_advanced_send_anonymous_crash_reports_summary">Send anonymous crash reports and basic data like version number and operating system to help Wire identify and solve issues in the app.</string>
    <string name="pref_advanced_send_anonymous_usage_data_title">Send anonymous usage data</string>
    <string name="pref_advanced_send_anonymous_usage_data_summary">Usage data allows Wire to understand how the app is being used and how it can be improved. The data is anonymous and does not include the content of your communications (such as messages, files or calls).</string>
    <string name="pref_advanced_receive_news_and_offers_title">Receive Newsletter</string>
    <string name="pref_advanced_receive_news_and_offers_summary">Receive news and product updates from Wire via email.</string>
    <string name="pref_options_app_lock_change">Change passcode</string>
    <string name="pref_options_app_lock_title">Lock with Passcode</string>
    <string name="pref_options_app_lock_summary">Lock Wire after %1$s seconds in the background. Unlock with Pin, Pattern, Passcode or Biometrics.</string>
    <string name="new_reg__phone_signup__create_account">Create an account</string>
    <string name="app_entry_login">Log in</string>
    <string name="custom_backend_welcome">Welcome to\n%1$s workspace</string>
    <string name="custom_backend_info_title">Connected to \"%1$s\"</string>
    <string name="custom_backend_info_show_more">SHOW MORE</string>
    <string name="welcome_to_wire">Welcome to Wire</string>
    <string name="welcome_enterprise_log_in">Enterprise Login</string>
    <string name="welcome_custom_backend_log_in_email">LOG IN WITH EMAIL</string>
    <string name="welcome_custom_backend_log_in_sso">LOG IN WITH SSO</string>
</resources>