<?xml version="1.0" encoding="utf-8"?><!--

    Wire
    Copyright (C) 2018 Wire Swiss GmbH

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.waz.zclient.preferences.views.SwitchPreference
            android:id="@+id/preferences_app_lock_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pref_options_app_lock_title"
            app:subtitle="@string/pref_options_app_lock_summary"
            app:title="@string/pref_options_app_lock_title" />

        <com.waz.zclient.preferences.views.TextButton
            android:id="@+id/preferences_app_lock_change_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/preference_button_height"
            app:title="@string/pref_options_app_lock_change" />
    </LinearLayout>

</merge>
